# pytest-prettifier

./: CHANGES.rst  CONTRIBUTING.rst  README.rst  pyproject.toml
docs/: conf.py  modules.rst  pytest_prettifier.rst
pytest_prettifier/: fixtures.py  prettifier.py  registry.py  timestamp.py
tests/unit/: test_prettifier.py  test_registry.py  test_timestamp.py
